--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,15 @@
   padding: 1.5rem;
 }
 
+.heading {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 2px;
+  margin: 1.5rem 1rem;
+}
+
 .card {
   padding: 1rem;
   align-self: flex-start;
